--- a/Aplicacion de SCRAP/Aplicacion de SCRAP.csproj
+++ b/Aplicacion de SCRAP/Aplicacion de SCRAP.csproj
@@ -334,7 +334,6 @@
     <Content Include="img\logo.png" />
     <Content Include="img\logoCTS.ico" />
     <Content Include="img\Osram10.jpg" />
-    <Content Include="logoCTS.ico" />
     <Content Include="Scripts\ag-grid.min.noStyle.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -522,7 +521,8 @@
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>logoCTS.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
