--- a/Aplicacion de SCRAP/Aplicacion de SCRAP.csproj
+++ b/Aplicacion de SCRAP/Aplicacion de SCRAP.csproj
@@ -278,6 +278,10 @@
     <Compile Include="Migrations\201810012015203_act.Designer.cs">
       <DependentUpon>201810012015203_act.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201810031923222_currency.cs" />
+    <Compile Include="Migrations\201810031923222_currency.Designer.cs">
+      <DependentUpon>201810031923222_currency.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Autorizantes.cs" />
     <Compile Include="Models\CauseSMT.cs" />
@@ -514,6 +518,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201810012015203_act.resx">
       <DependentUpon>201810012015203_act.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810031923222_currency.resx">
+      <DependentUpon>201810031923222_currency.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
